Improve Spec Display
Adds a copy button, shows the origin

--- a/templates/includes/card.html
+++ b/templates/includes/card.html
@@ -88,8 +88,12 @@
           </tr>
           {% if api.spec %}
           <tr>
-            <td>Standards Specification</td>
-            <td><code>{{api.spec.spec}}</code></td>
+            <td>Specification</td>
+            <td><a href="{{api.spec.url}}">{{api.spec.origin}}</a>
+              <button class="copy" data-url="{{api.spec.url}}" aria-label="Copy link">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M18 21H4V7H2v14c0 1.1.9 2 2 2h14v-2zm3-4V3c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2zm-2 0H8V3h11v14z"/></svg>
+              </button>
+            </td>
           </tr>
           {% endif %}
           {% if api.flag %}
@@ -255,8 +259,12 @@
             </tr>
             {% if api.spec %}
             <tr>
-              <td>Standards Specification</td>
-              <td><code>{{api.spec.spec}}</code></td>
+              <td>Specification</td>
+              <td><a href="{{api.spec.url}}">{{api.spec.origin}}</a>
+                <button class="copy" data-url="{{api.spec.url}}" aria-label="Copy link">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M18 21H4V7H2v14c0 1.1.9 2 2 2h14v-2zm3-4V3c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2zm-2 0H8V3h11v14z"/></svg>
+                </button>
+              </td>
             </tr>
             {% endif %}
             {% if api.flag %}
