--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -18,7 +18,7 @@
   }
 
   &__list {
-    background-color: var(--yellow);
+    background-color: var(--chromium-light-blue);
 
     &::before {
       content: '';
@@ -31,7 +31,7 @@
       left: 0;
       border-left: 100vw solid transparent;
       border-right: 0px solid transparent;
-      border-top: 5vh solid var(--yellow);
+      border-top: 5vh solid var(--chromium-light-blue);
       z-index: -1;
     }
   }
