--- a/templates/includes/info.html
+++ b/templates/includes/info.html
@@ -14,12 +14,14 @@
  limitations under the License.
 -->
 
-{% macro info(platforms, copy='') %}
+{% macro info(platforms, copy='', footer='') %}
 <aside class="flyout" id="info">
   <button class="flyout--toggle" aria-label="Open info">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <path d="M0 0h24v24H0V0z" fill="none" />
-      <path d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z" />
+      <path
+        d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
+      />
     </svg>
   </button>
   <div class="flyout--body info">
@@ -37,7 +39,7 @@
       <tbody>
         <tr>
           <td>🐡</td>
-          <td>Shipped, or expecting to ship, in Chrome</td>
+          <td>Shipped, or expecting to ship, in Chromium</td>
         </tr>
         <tr>
           <td>🔮</td>
@@ -74,12 +76,15 @@
       <tbody>
         {% for platform in platforms %}
         <tr>
-          <td><img class="card--location" src="/images/{{platform | slug}}.svg" alt="{{platform}}" /></td>
+          <td>
+            <img class="card--location" src="/images/{{platform | slug}}.svg" alt="{{platform}}" />
+          </td>
           <td>{{platform}}</td>
         </tr>
         {% endfor %}
       </tbody>
     </table>
+    <div class="info--desc">{{footer | md | safe}}</div>
   </div>
 </aside>
 {% endmacro %}
