:bug: Fix calc typo

--- a/src/css/components/_info.scss
+++ b/src/css/components/_info.scss
@@ -19,7 +19,7 @@
   padding: 1rem;
   margin-top: -2.5rem;
   max-width: calc(100vw - 2.5rem);
-  max-height: (100vh - 2.5rem);
+  max-height: calc(100vh - 2.5rem);
   overflow: auto;
 
   &--desc {
