:new: Add anchors for API cards

--- a/src/css/list.scss
+++ b/src/css/list.scss
@@ -79,3 +79,8 @@ section:first-of-type {
   margin: 0;
   padding: 2rem 0;
 }
+
+// Scroll padding for sticky header
+:root.view--list {
+  scroll-padding-top: 3rem;
+}
