--- a/views/index.html
+++ b/views/index.html
@@ -64,7 +64,8 @@ view: list
 
 {% for type, items in apis %} {% if items.length %}
 <section>
-  <h2>{{sections[type] | safe}}</h2>
+  {% set sectionID = "{{sections[type].split(' ').slice(0, 2).join('-') | slug}}" %}
+  <h2 id="{{sectionID}}">{{sections[type] | safe}} <a href="#{{sectionID}}">#</a></h2>
   <ul class="cards" role="list">
     {% for api in items %} {{card(api, type | lower)}} {% endfor %}
   </ul>
