Add anchors for API cards (#24)
* :new: Add anchors for API cards

* Update src/css/list.scss

Co-authored-by: Sam Richard <snugug@google.com>

* Bring back target highlight

* Toggle behavior

Co-authored-by: Sam Richard <snugug@google.com>
Co-authored-by: Thomas Steiner <tomac@google.com>

--- a/src/css/list.scss
+++ b/src/css/list.scss
@@ -79,3 +79,9 @@ section:first-of-type {
   margin: 0;
   padding: 2rem 0;
 }
+
+// Scroll padding for sticky header
+:root.view--list {
+  scroll-padding-top: 2.75rem;
+  scroll-behavior: smooth;
+}
